Fix scrollbar and build

--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -6,6 +6,7 @@
 #blog {
     border: none;
     flex-grow: 1;
+    overflow: hidden;
 }
 
 #wa-note {
